:memo: docs: change description, added link

--- a/README.org
+++ b/README.org
@@ -5,9 +5,10 @@
   - [[#tech-stack][Tech Stack]]
 
 ** About
+https://coupon-wallet.pages.dev/
+
 This frontend application is a technical evaluation from TapOnIt, which displays
-a list of coupons in an appealing way that can be redeemed by users. Each coupon
-can only be redeemed once. This application is currently in development
+a list of coupons in a responsive and appealing way. Each coupon can be redeemed by the user only once.
 
 ** Tech Stack
 + Nuxt
